--- a/Project Report/example_paper.tex
+++ b/Project Report/example_paper.tex
@@ -92,26 +92,22 @@ We designed the pen layout and body in CAD (pictured below) to ensure appropriat
     \caption{Rendering of the 3D printed model of the penn}
 \end{figure}
 
-An ATMega32u4 microcontroller provides onboard processing and interfaces to the wireless module, IMU, switch, and indicator LEDs. Two Nordic nRF24LE1 transceivers handle wireless communication between the pen and base station computer. Inertial measurements are provided by an MPU6050 digital IMU with configurable gain triaxial accelerometers and gyroscopes. A Honeywell HMC5883L triaxial magnetometer provides a reference to earth's magnetic field for orientation. A switch behind the pen tip detects contact with the page for character segmentation. Three LEDs on the case display pen state. The pen also includes onboard batteries, power management, and an on-off switch.
+An ATMega32u4 microcontroller provides onboard processing and interfaces to the wireless module, IMU, switch, and indicator LEDs. Two Nordic nRF24LE1 transceivers handle wireless communication between the pen and base station computer. Inertial measurements are provided by an MPU6050 digital IMU with configurable gain triaxial accelerometers and gyroscopes. A Honeywell HMC5883L triaxial magnetometer provides a reference to earth's magnetic field for orientation. A contact switch behind the pen tip detects contact with the page for character segmentation. Three LEDs on the case display pen state. The pen also includes onboard batteries, power management, and an on-off switch.
+In this project, we use accelerometer sensitivity of +/-2g (0.59 milimeter per second squared resolution) and gyro sensitivity of +/-250 degrees per second (7.6 milidegrees per second resolution) for high resolution across accelerations and speeds encountered in writing. 
 %As you can see, we have an on-board microprocessor, 3 axis accelerometer, 3 axis gyroscope, magnetometer, and WiFi module. It also has a very sensitive switch that can tel us when the pen is actually writing. On top of that, the pen has 3 LED lights to make a visual recognition of the states the pen was at. We also included in the real version, a switch to turn it on and off, and batteries.
 
 \section{Data Processing} 
+Raw inertial measurements are pre-processed in in several stages to generate features used in our learning algorithm. Two features sets have been considered: raw time-domain acceleration signals and integrated character images. As character recognition was a component of the third CIS519 assignment, we opted to focus on the integrated character image in our work thus far. In this approach, the IMU measurements are used to estimate the accelerations of the pen tip across the page which are twice integrated to estimate the trajectory of the pen tip and corresponding appearance of the character on the page. This processing involves five steps detailed in the following sections: data aquisition and preparation, attitude estimation and gravity cancellation, coordinate transformation, and finally integration and image generation.
 
-\subsection{Data Streaming}
- 
-The first thing we had to do was to get raw data readings from the pen. After a couple of trials and for the sake of time saving, we decided that we would have a better first approach streaming the data out through USB instead of WiFi, to get a higher density of readings (WiFi is slower, saturates faster). Though the pen still has the functionality and all the programming to send the data via WiFi, we are more interested in getting the data out as soon as possible. Once that was done, we could pass to the next big task, data pre-processing.
+\subsection{Data aquisition and Preparation}
+Measurements from the IMU and contact switch onboard the pen are streamed wirelessly to a computer for processing. The computer logs seven signals: triaxial acceleration, triaxial angular velocities, and contact switch state (depressed or released). Acceleration and angular velocity signals are scaled to engineering units (meters per second squared and radians per second respectively) for all following operations. Both acceleration and angular velocity signals are passed through first-order low pass filters to reduce high frequency noise introduced by the sliding of the pen tip across the page in writing.
 
-\subsection{Filtering the data}
+\subsection{Attitude Estimation and Gravity Cancellation}
+In order to integrate the tip accelerations, the measured acceleration due to gravity must be removed from the acceleration signals and the pen motions must be translated first to the pen tip and then into the plane of the page. All of these operations require knowledge of the pen's orientation relative to gravity. Pen attitude estimation is implemented using Sebastian Madgwick's open-source work. To counter gyro-integration drift in rotation about the vertical axis, the vertical axis rotation is high pass filtered. Using the pen attitude estimate, the acceleration and angular velocity vectors are rotated into the world frame with gravity along the z axis. Gravity can then be subtracted from the acceleration vector to obtain the acceleration of the pen relative to the page.
 
-The raw data you get out of this readings is really noisy. It cannot be used in any way like it is. The data needs to be filtered to get the attitude estimation. We use a Kalman Filter to get the attitude estimation, which will give us the orientation of the pen relative to gravity and the page (Which has to be on a flat surface, and cannot be moving).
-We use this to subtract the gravity components in the vectors that they are appearing, so in this way we prevent drifting on those readings. We also get out of this the rotation of the pen relative to the page, which we will then use for further filtering.
+\subsection{Coordinate Transformation}
+Accelerations and rotations of the pen body measured at the IMU are translated to the tip by the following transform:
 
-\subsection{More filtering... and trajectory tracking}
-
-Once we have the pre-filtered data, we can get a cleaner reading of the acceleration of the tip of the pen (relative to the page), which we will use to get a trajectory estimation. We integrate the acceleration twice, while at the same time, high-pass filtering any long time drifting of the readings in both yaw angle and velocities.
-
-
-\subsection{Implicated Dynamics}
 \textbf{P}: location of the IMU \\
 \textbf{O}: origin of frame G on the page \\
 \textbf{frame G}: SRT fixed to the page with origin O (ground frame) \\
@@ -135,8 +131,7 @@ The acceleration of the pen tip in the ground frame is given by:
 \end{align*}
 Since point Q (the pen tip) is fixed in frame M (the pen frame), $^M
 \underset{\mbox{\textasciitilde}}{a}^Q$ and $^M
-\underset{\mbox{\textasciitilde}}{v}^Q$ are both 0. The above equation
-simplifies to:
+\underset{\mbox{\textasciitilde}}{v}^Q$ are both 0. The above equation simplifies to:
 \begin{eqnarray*}
   & ^G \underset{\mbox{\textasciitilde}}{a}^Q =^G
   \underset{\mbox{\textasciitilde}}{a}^P +^G
@@ -146,34 +141,33 @@ simplifies to:
   \underset{\mbox{\textasciitilde}}{w}^M \times
   \underset{\mbox{\textasciitilde}}{\tmop{PQ}} \right) & 
 \end{eqnarray*}
-The IMU measures accelerations and angular velocities of frame M relative to
-frame G expressed in frame M. \ Using the attitude estimate, these
-measurements can be rotated into frame G to produce $^G
+The IMU measures accelerations and angular velocities of frame M relative to frame G expressed in frame M. \ Using the attitude estimate, these measurements can be rotated into frame G to produce $^G
 \underset{\mbox{\textasciitilde}}{a}^P$ and $^G
 \underset{\mbox{\textasciitilde}}{w}^M \nosymbol$. \ The angular acceleration
 $^G \underset{\mbox{\textasciitilde}}{\alpha}^P$ is obtained by numerically
 differentiating $^G \underset{\mbox{\textasciitilde}}{w}^M$.
 
-The trajectory of the pen tip in the page frame is obtained by
-twice-integrating $^G \underset{\mbox{\textasciitilde}}{a}^Q$.
+\subsection{Integration and Image Generation}
+The trajectory of the pen tip in the page frame is obtained by twice-integrating $^G \underset{\mbox{\textasciitilde}}{a}^Q$.
+Since the velocity and position are integrations of noisy signals they are prone to very significant drift over time. To counteract this drift, the position and velocity estimates are re-zeroed at the start of every character and both the velocity and position are high pass filtered. The resulting trajectory can be plotted in the plane to approximate the appearance of the character on the page. This trajectory image is sampled to produce a black and white image which is then scaled and blurred to produce the final learning features.
 
-This does not work because of measurement noise and drift. Differentiation
-of $^G \underset{\mbox{\textasciitilde}}{w}^M$ greatly increases
-high-frequency noise in the acceleration estimate which must be low-pass
-filtered. More problematic, double-integration of the acceleration estimate
-compounds small steady errors which build up to large velocity errors and even
-larger position errors. This necessitates high-pass filtering of both the
-velocity and position signals. These high-pass filters are ineffective both
-at removing low-frequency drift and maintaining good signal quality resulting
-in unusably noisy and drift-filled position estimates
+% Data Streaming
+%The first thing we had to do was to get raw data readings from the pen. After a couple of trials and for the sake of time saving, we decided that we would have a better first approach streaming the data out through USB instead of WiFi, to get a higher density of readings (WiFi is slower, saturates faster). Though the pen still has the functionality and all the programming to send the data via WiFi, we are more interested in getting the data out as soon as possible. Once that was done, we could pass to the next big task, data pre-processing.
+% Filtering the data
+%The raw data you get out of this readings is really noisy. It cannot be used in any way like it is. The data needs to be filtered to get the attitude estimation. We use a Kalman Filter to get the attitude estimation, which will give us the orientation of the pen relative to gravity and the page (Which has to be on a flat surface, and cannot be moving).
+%We use this to subtract the gravity components in the vectors that they are appearing, so in this way we prevent drifting on those readings. We also get out of this the rotation of the pen relative to the page, which we will then use for further filtering.
+% More filtering... and trajectory tracking
+%Once we have the pre-filtered data, we can get a cleaner reading of the acceleration of the tip of the pen (relative to the page), which we will use to get a trajectory estimation. We integrate the acceleration twice, while at the same time, high-pass filtering any long time drifting of the readings in both yaw angle and velocities.
+%Differentiation of $^G \underset{\mbox{\textasciitilde}}{w}^M$ greatly increases high-frequency noise in the acceleration estimate which must be low-pass filtered. More problematic, double-integration of the acceleration estimate compounds small steady errors which build up to large velocity errors and even larger position errors. This necessitates high-pass filtering of both the velocity and position signals. These high-pass filters are ineffective both at removing low-frequency drift and maintaining good signal quality resulting in unusably noisy and drift-filled position estimates.
 
 \subsection{Preliminary Results}
-After some trials and errors, we finally de-bugged the code to get some character images that we could then use with the neural nets that we have already implemented on class, to get some character recognition via class classification.
-The results from all the estimations give us characters like the one below.
+The integrated character image is prone to distortion due to velocity and position drift over the course of writing the character. Our current filtering schemes are somewhat successful at reducing integration drift and rejecting noise from vibration, but character distortion is still significant. An example character integration is shown below.
+%After some trials and errors, we finally de-bugged the code to get some character images that we could then use with the neural nets that we have already implemented on class, to get some character recognition via class classification.
+%The results from all the estimations give us characters like the one below.
 \begin{figure}[H]
 \centering
     \includegraphics[width=0.5\textwidth, height= 5cm]{g.png}
-    \caption{Representation results of the letter "g"}
+    \caption{Processed written letter "g"}
 \end{figure}
 
 
