--- a/Final Report/report-deVillalobosLautmanYim.tex
+++ b/Final Report/report-deVillalobosLautmanYim.tex
@@ -90,11 +90,20 @@ The pen layout and body was designed in CAD (pictured below) to ensure appropria
 \end{figure}
 
 \subsection{Electronics}
-An ATMega32u4 microcontroller provides on-board processing and interfaces to the wireless module, IMU, switch, and indicator LEDs. Two Nordic nRF24LE1 transceivers handle wireless communication between the pen and base station computer. Inertial measurements are provided by an MPU6050 digital IMU with configurable gain triaxial accelerometers and gyroscopes. A Honeywell HMC5883L triaxial magnetometer provides a reference to earth's magnetic field for orientation. A switch behind the pen tip detects contact with the page for character segmentation. Three LEDs on the case display pen state. The pen also includes on-board batteries, power management, and an on-off switch.
+An ATMega32u4 microcontroller provides on-board processing and interfaces to the wireless module, IMU, switch, and indicator LEDs. Two Nordic nRF24LE1 transceivers handle wireless communication between the pen and base station computer. Inertial measurements are provided by an MPU6050 digital IMU with configurable gain triaxial accelerometers and gyroscopes. A Honeywell HMC5883L triaxial magnetometer provides a reference to earth's magnetic field for orientation. A switch behind the pen tip detects contact with the page for character segmentation. Three LEDs on the case display pen state. The pen also includes on-board batteries, power management, and an on-off switch to track idle and writing time of the pen, which translates in useful and un-useful data.
 
 \subsection{Filtering the data}
 
-The raw data from the IMU pose issues for learning algorithms. Sources of variance can include posture, handed-ness, roll angle of the pen, and sensor drift. To minimize sources of error, we compute the trajectory of the pen tip on the page to generate features in a four step process.  First, IMU measurements are scaled to engineering units and are low-pass filtered to remove high frequency noise from vibration.  Second, we use Madgwick?s open source Kalman filter attitude estimation to find the orientation of the pen relative to the page.  Third, we transform the IMU measurements into the ground frame relative to the page and double-integrate the acceleration to estimate the displacements of the pen tip.  Fourth and finally, the position and velocity estimates are high-pass filtered to remove drift.  From this IMU data processing we obtain the x,y,z position, velocity, and acceleration of the pen in the page frame as well as the euler angles and angular rates of the pen in the page frame at 300Hz sample rate.
+The raw data from the IMU pose issues for learning algorithms. Sources of variance can include posture, handed-ness, roll angle of the pen, and sensor drift. To minimize sources of error, we compute the trajectory of the pen tip on the page to generate features in a four step process. 
+\begin{enumerate}
+  \item IMU measurements are scaled to engineering units and are low-pass filtered to remove high frequency noise from vibration.
+  \item We use Madgwick's open source Kalman filter and attitude estimator to find the orientation of the pen relative to the page.
+  \item We transform the IMU measurements into the ground frame relative to the page and double-integrate the acceleration to estimate the displacements of the pen tip.
+  \item Finally, the position and velocity estimates are high-pass filtered to remove drift.
+\end{enumerate}
+
+From this IMU data processing we obtain the x,y,z position, velocity, and acceleration of the pen in the page frame as well as the euler angles and angular rates of the pen in the page frame at 300Hz sample rate. \newline
+Down below we can see how the user interface for testing looks like, and an example of the trajectory reconstruction of a "g" letter. In the MATLAB plots we can see all the readings of the IMU in real time, the attitude estimation of the penn in 3D (Which corresponds to the real position of the penn with a very slight delay), and the real time trajectory reconstruction of the writings with other parameters.
 
 \begin{figure}[H]
 \centering
@@ -141,8 +150,14 @@ We first tested Support Vector Machines with different Kernels to compare the re
     \end{tabular}
 \end{center}
 
-As we can clearly see, while the linear and polynomial kernel do a pretty good job to classify the characters, the rbf is VERY prone to subtle variations in the parameters, which makes it a non robust method for character recognition. The gaussian kernel smoothes everything if you don?t have the correct parameters, and that is why it?s a non reliable method for this application in particular. We can see how the performance for the gaussian kernel goes from 3 to 77\% and then back down to 10\% depending on the choice of gamma. And then once again changing the signal length we get very different performances.
+As we can clearly see, while the linear and polynomial kernel do a pretty good job to classify the characters, the rbf is VERY prone to subtle variations in the parameters, which makes it a non robust method for character recognition. The gaussian kernel smoothes everything if you don't have the correct parameters, and that is why it's a non reliable method for this application in particular. We can see how the performance for the gaussian kernel goes from 3 to 77\% and then back down to 10\% depending on the choice of gamma. And then once again changing the signal length we get very different performances.
 On the other side, we can see that the accuracy obtained by the polynomial kernel is not even affected by the degree of the same and the variations are little while it runs very fast. Beer then, we get the best performance with the linear kernel, where we don't have to worry about the gamma or the polynomial degree.
+
+As expected, decision trees perform poorly on this dataset.  Decision trees in general have lower predictive power than the other methods applied here.  Furthermore, we expect the ideal decision function to be much smoother non axis-aligned than the axes-parallel hyper-rectangles of decision trees can produce.  This is because the integrated time series features are highly correlated with one another.  Despite the smoothing of AdaBoost, AdaBoosted decision trees still underperformed other methods for some settings, and got over 97\% accuracy for some other setting, but taking a lot of extra time that is essential for the quickness of writing and 3\% increase in performance does not justify the speed of AdaBoost at this settings.
+
+Logistic regression performs well achieving accuracy, precision, and recall of 89\% with both l1 and l2 norm distance metrics.  
+ 
+Several letters are very similar in stroke trajectory.  All learning algorithms struggled with these sets of letters more than other sets of letters as the confusion matrices reveal.  Similar letter pairs include o and 0, p and b, 9 and q, y and x, h and n, 0 and 6, 5 and 6, 7 and 8, v and r, m and k, and a and u.  Some of these letter pairs look visually different from each other, but are composed of similar stroke patterns (for example a script k and an m share the same vertical beginning stroke, direction reversal, loop and second direction reversal).
 
 
 \section{Performance}
@@ -154,7 +169,7 @@ The algorithms that were tested were SVCs with different kernels, Decision Trees
  As we can well see, even though the logistic regression gets ~89\% accuracy, the ones that do better are the SVCs with linear kernel. SVCs with linear kernels present a robust machine learning algorithm that is not going to be changed completely if we add a new feature to the feature vector for example. They perform quickly, efficiently, and accurately making them the best algorithm for the task. We will next compare some of the results between the SVCs with linear kernels and the Decision trees that among the ones that perform poorly, still get over 60\% accuracy.
 
 
-
+We can observe how the true positives in the SVCs go steeper and faster into the true positive area, making less mistakes in all instances.
 % Precision & recall, ROC, etc.
 \begin{figure}[H]
 	\centering
@@ -166,7 +181,7 @@ The algorithms that were tested were SVCs with different kernels, Decision Trees
 	\includegraphics[width=0.5\textwidth, height= 5cm]{roc_tree1_dt.png}
 	\caption{ROC curves of a Decision Tree with max depth = 100}
 \end{figure} 
-
+Next we will be looking at the confusion matrices of SVCs with linear kernel and Decision Trees. We will appreciate this index in the way that it visually and automatically compares the accuracy of a method to another, and which are the characters that are most commonly mis-classified.
 % Confusion matrix
 \begin{figure}[H]
 	\centering
@@ -179,6 +194,7 @@ The algorithms that were tested were SVCs with different kernels, Decision Trees
 	\caption{Confusion Matrix of a Decision Tree with max depth = 100}
 \end{figure} 
 We can observe in these confusion matrices how the diagonal is much stronger than the sides, meaning that most of the instances of a certain class are classified correctly, and that there are very little false positives and false negatives.
+And it is visually clear how different the performance for these two methods is, because we can see a lot more light blue spots in the false positive area in decision trees for things that were mis-classified.
 
 
 \section{Results}
