--- a/Final Report/report-deVillalobosLautmanYim.tex
+++ b/Final Report/report-deVillalobosLautmanYim.tex
@@ -117,10 +117,52 @@ Down below we can see how the user interface for testing looks like, and an exam
     \caption{Recovered letter "g"}
 \end{figure}
 
+\subsection{Coordinate Transformation}
+Accelerations and rotations of the pen body measured at the IMU are translated to the tip by the following transform:
 
-%\subsection{Next Steps}
-%The next step in the project is to create a labeled test set. With a training set in hand, we will begin testing different learning algorithms so that we can find the most successful model. To this end, we will approach the learning component of this project in two ways. One method involves projecting the trajectory into an image and using learning algorithms such as neural networks. The other method involves using feature selection methods on the filtered signals before integration and differentiation. This method will require that we transform the time series data into a constant width feature vector. By interpolating, we are able to produce this result. Reducing dimensionality might prove to be an important step if we experience performance issues. In that case we intend to use either PCA or LDA to generate features. We intend to test the performance of various learning algorithms including Hidden Markov Models, Neural Networks, and Naive Bayes.
+\textbf{P}: location of the IMU \\
+\textbf{O}: origin of frame G on the page \\
+\textbf{frame G}: SRT fixed to the page with origin O (ground frame) \\
+\textbf{frame M}: SRT fixed to the pen at the IMU with origin at point P (pen frame) \\
+\textbf{Q}: location of the pen tip \\
+$\underset{\mbox{\textasciitilde}}{\tmop{\textbf{PQ}}}$: vector from the IMU origin to
+the pen tip
 
+The acceleration of the pen tip in the ground frame is given by:
+\begin{align*}
+  ^G \underset{\mbox{\textasciitilde}}{a}^Q =^G
+  \underset{\mbox{\textasciitilde}}{a}^P +^M
+  \underset{\mbox{\textasciitilde}}{a}^Q &+^G
+  \underset{\mbox{\textasciitilde}}{\alpha}^P \times
+  \underset{\mbox{\textasciitilde}}{\tmop{PQ}} + 2^G
+  \underset{\mbox{\textasciitilde}}{w}^M \times^M
+  \underset{\mbox{\textasciitilde}}{v}^Q + ... \\ &+ ^G 
+  \underset{\mbox{\textasciitilde}}{w}^M \times \left(^G
+  \underset{\mbox{\textasciitilde}}{w}^M \times
+  \underset{\mbox{\textasciitilde}}{\tmop{PQ}} \right)
+\end{align*}
+Since point Q (the pen tip) is fixed in frame M (the pen frame), $^M
+\underset{\mbox{\textasciitilde}}{a}^Q$ and $^M
+\underset{\mbox{\textasciitilde}}{v}^Q$ are both 0. The above equation simplifies to:
+\begin{eqnarray*}
+  & ^G \underset{\mbox{\textasciitilde}}{a}^Q =^G
+  \underset{\mbox{\textasciitilde}}{a}^P +^G
+  \underset{\mbox{\textasciitilde}}{\alpha}^P \times
+  \underset{\mbox{\textasciitilde}}{\tmop{PQ}} +^G
+  \underset{\mbox{\textasciitilde}}{w}^M \times \left(^G
+  \underset{\mbox{\textasciitilde}}{w}^M \times
+  \underset{\mbox{\textasciitilde}}{\tmop{PQ}} \right) & 
+\end{eqnarray*}
+The IMU measures accelerations and angular velocities of frame M relative to frame G expressed in frame M. \ Using the attitude estimate, these measurements can be rotated into frame G to produce $^G
+\underset{\mbox{\textasciitilde}}{a}^P$ and $^G
+\underset{\mbox{\textasciitilde}}{w}^M \nosymbol$. \ The angular acceleration
+$^G \underset{\mbox{\textasciitilde}}{\alpha}^P$ is obtained by numerically
+differentiating $^G \underset{\mbox{\textasciitilde}}{w}^M$.
+
+The trajectory of the pen tip in the page frame is obtained by twice-integrating $^G \underset{\mbox{\textasciitilde}}{a}^Q$.
+Since the velocity and position are integrations of noisy signals they are prone to very significant drift over time. To counteract this drift, the position and velocity estimates are re-zeroed at the start of every character and both the velocity and position are high pass filtered. The resulting trajectory can be plotted in the plane to approximate the appearance of the character on the page. This trajectory image is sampled to produce a black and white image which is then scaled and blurred to produce the final learning features.
+
+\newpage
 \section{Learning}
 
 \subsection{Features}
@@ -132,10 +174,6 @@ We first tested Support Vector Machines with different Kernels to compare the re
 \begin{center}
     \begin{tabular}{ | c | c | c | c | c | r |}
     \hline
-    %\hline
-    %& \multicolumn{2}{|c|}{$\textbf{Naive Bayes}$} & \multicolumn{2}{|c|}{$\textbf{SVM w/cos Kernel}$} \\ \hline
-    %Train Time & \multicolumn{2}{|c|}{0.17371 s} & \multicolumn{2}{|c|}{42.37024 s} \\ \hline
-    %& Train & Test & Train & Test \\ \hline
     $\textbf{Algo.}$ & $\textbf{Kernel}$  & $\textbf{param}$ & $\textbf{Sig Len}$ & $\textbf{Time(s)}$ & $\textbf{Acc.}$ \\ \hline
     SVC & linear & - & 10 & 2.114 & 96 $\%$ \\ \hline
     SVC & poly & 2 & 10 & 2.07 & 91 $\%$ \\ \hline
@@ -150,8 +188,8 @@ We first tested Support Vector Machines with different Kernels to compare the re
     \end{tabular}
 \end{center}
 
-As we can clearly see, while the linear and polynomial kernel do a pretty good job to classify the characters, the rbf is VERY prone to subtle variations in the parameters, which makes it a non robust method for character recognition. The gaussian kernel smoothes everything if you don't have the correct parameters, and that is why it's a non reliable method for this application in particular. We can see how the performance for the gaussian kernel goes from 3 to 77\% and then back down to 10\% depending on the choice of gamma. And then once again changing the signal length we get very different performances.
-On the other side, we can see that the accuracy obtained by the polynomial kernel is not even affected by the degree of the same and the variations are little while it runs very fast. Beer then, we get the best performance with the linear kernel, where we don't have to worry about the gamma or the polynomial degree.
+As we can clearly see, while the linear and polynomial kernel do a pretty good job to classify the characters, the gaussian is VERY prone to subtle variations in the parameters, which makes it a non robust method for character recognition. The gaussian kernel smoothes everything if you don't have the correct parameters, and that is why it's a non reliable method for this application in particular. We can see how the performance for the gaussian kernel goes from 3 to 77\% and then back down to 10\% depending on the choice of gamma. And then once again changing the signal length we get very different performances. \newline
+On the other side, we can see that the accuracy obtained by the polynomial kernel is not even affected by the degree of the same and the variations are little while it runs very fast. Better then, we get the best performance with the linear kernel, were we don't have to worry about the gamma or the polynomial degree.
 
 As expected, decision trees perform poorly on this dataset.  Decision trees in general have lower predictive power than the other methods applied here.  Furthermore, we expect the ideal decision function to be much smoother non axis-aligned than the axes-parallel hyper-rectangles of decision trees can produce.  This is because the integrated time series features are highly correlated with one another.  Despite the smoothing of AdaBoost, AdaBoosted decision trees still underperformed other methods for some settings, and got over 97\% accuracy for some other setting, but taking a lot of extra time that is essential for the quickness of writing and 3\% increase in performance does not justify the speed of AdaBoost at this settings.
 
@@ -191,15 +229,17 @@ Next we will be looking at the confusion matrices of SVCs with linear kernel and
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\textwidth, height= 5cm]{cm_tree1_dt.png}
-	\caption{Confusion Matrix of a Decision Tree with max depth = 100}
+	\caption{Conf. Matrix of a Decision Tree with max depth = 100}
 \end{figure} 
 We can observe in these confusion matrices how the diagonal is much stronger than the sides, meaning that most of the instances of a certain class are classified correctly, and that there are very little false positives and false negatives.
 And it is visually clear how different the performance for these two methods is, because we can see a lot more light blue spots in the false positive area in decision trees for things that were mis-classified.
 
 
 \section{Results}
+Character recognition was achieved with a very high accuracy and implemented in real time in a real environment. The methods and equations listed above have proven successful and reliable.\newline
 Here you can see a video of our interface, readings, character tracking, and an example of a "Hello World" recognition: 
-\url{https://www.youtube.com/watch?v=L0AaqIswKBE&list=UUEdPimfOpE81_NbsL7sXQhA&spfreload=10}
+\url{https://www.youtube.com/watch?v=L0AaqIswKBE&list=UUEdPimfOpE81_NbsL7sXQhA&spfreload=10} \newline \newline
+While very satisfied with the results, this is far from being a commercial product. But being that we could get this working in such a short period of time, I believe that with a couple of months of exclusive work on this devise, we could get into market a penn that implements Hidden Markov Models (While on our research we found that this algorithm could lead to smaller percentage errors) and has a very low percentage error, while at the same time is capable of doing some more advanced things like spaces, or math. A penn that could put math into your digital notes would be a great product that we believe can have a great success in real market, competing at a much lower price with products that rely on cameras to get similar results (While at the same time I have not seen one that performs adequately in math environments).
 
 \section*{Acknowledgments} 
  
